<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/metric_bmi_option"
        android:title="@string/metric_bmi" />
    <item android:id="@+id/imperial_bmi_option"
        android:title="@string/imperial_bmi" />
    <item
        android:id="@+id/about_option"
        android:title="@string/about_option" />
</menu>